--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h1>Complete the Form -<br> Complete the Story!</h1>
             <hr>
             <!-- Add your form below:-->
+            <form></form>
         </section>
     </body>
 </html>
