--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Complete the Form -<br> Complete the Story!</h1>
             <hr>
             <!-- Add your form below:-->
-            <form></form>
+            <form action="./resources/html/story.html" method="get"></form>
         </section>
     </body>
 </html>
