--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <h1>Complete the Form -<br> Complete the Story!</h1>
             <hr>
             <!-- Add your form below:-->
-            <form action="./resources/html/story.html" method="get"></form>
+            <form action="./resources/html/story.html" method="get">
+                <input type="submit" value="Form My Story!">
+            </form>
         </section>
     </body>
 </html>
