--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <hr>
             <!-- Add your form below:-->
             <form action="./resources/html/story.html" method="get">
+                <label for="animal-1">Animal:</label>
+                <input id="animal-1" type="text" name="animal-1" required>
                 <input type="submit" value="Form My Story!">
             </form>
         </section>
