--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
                 <label for="animal-1">Animal:</label>
                 <input id="animal-1" type="text" name="animal-1" required>
                 <br>
-                
+                <label for="animal-2">Another Animal:</label>
+                <input id="animal-2" name="animal-2" type="text" required>
+                <br>
+                <label for="animal-3">One More Animal:</label>
+                <input id="animal-3" name="animal-3" type="text" required>
+                <br>
                 <input type="submit" value="Form My Story!">
             </form>
         </section>
