--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <label for="animal-3">One More Animal:</label>
                 <input id="animal-3" name="animal-3" type="text" required>
                 <br>
+                <label for="adj-1">Adjective (past tense):</label>
+                <input id="adj-1" name="adj-1" type="text" required>
+                <br>
                 <input type="submit" value="Form My Story!">
             </form>
         </section>
