--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <label for="adj-1">Adjective (past tense):</label>
                 <input id="adj-1" name="adj-1" type="text" required>
                 <br>
+                <label for="verb-1">Verb (ends in -ing):</label>
+                <input id="verb-1" name="verb-1" type="text" required>
+                <br>
                 <input type="submit" value="Form My Story!">
             </form>
         </section>
