--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <label for="verb-1">Verb (ends in -ing):</label>
                 <input id="verb-1" name="verb-1" type="text" required>
                 <br>
+                <label for="num-1">Number:</label>
+                <input id="num-1" name="num-1" type="number" required>
+                <br>
                 <input type="submit" value="Form My Story!">
             </form>
         </section>
