--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <label for="num-1">Number:</label>
                 <input id="num-1" name="num-1" type="number" required>
                 <br>
+                <span>Yes or No:</span>
                 <input type="submit" value="Form My Story!">
             </form>
         </section>
