--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 <input id="num-1" name="num-1" type="number" required>
                 <br>
                 <span>Yes or No:</span>
+                <input id="yes" type="radio" name="answer" value="yes" required>
+                <label for="yes">Yes</label>
                 <input type="submit" value="Form My Story!">
             </form>
         </section>
