--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <span>Yes or No:</span>
                 <input id="yes" type="radio" name="answer" value="yes" required>
                 <label for="yes">Yes</label>
+                <input id="no" type="radio" name="answer" value="no" required>
+                <label for="no">No</label>
+                <br>
                 <input type="submit" value="Form My Story!">
             </form>
         </section>
