--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 <input id="no" type="radio" name="answer" value="no" required>
                 <label for="no">No</label>
                 <br>
+                <label for="speed">Relative speed (ends in -er):</label>
+                <select id="speed" name="speed" required></select>
+                <br>
                 <input type="submit" value="Form My Story!">
             </form>
         </section>
