--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                 <label for="no">No</label>
                 <br>
                 <label for="speed">Relative speed (ends in -er):</label>
-                <select id="speed" name="speed" required></select>
+                <select id="speed" name="speed" required>
+                    <option value="faster">Faster</option>
+                    <option value="slower">Slower</option>
+                </select>
                 <br>
                 <input type="submit" value="Form My Story!">
             </form>
