--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                     <option value="slower">Slower</option>
                 </select>
                 <br>
+                <label for="quote">Motivational Quote:</label>
+                <input id="quote" name="quote" type="text" required list="quote-choices">
                 <input type="submit" value="Form My Story!">
             </form>
         </section>
