--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                 <br>
                 <label for="quote">Motivational Quote:</label>
                 <input id="quote" name="quote" type="text" required list="quote-choices">
+                <datalist id="quote-choices"></datalist>
+                <br>
                 <input type="submit" value="Form My Story!">
             </form>
         </section>
