--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
                 <br>
                 <label for="quote">Motivational Quote:</label>
                 <input id="quote" name="quote" type="text" required list="quote-choices">
-                <datalist id="quote-choices"></datalist>
+                <datalist id="quote-choices">
+                    <option value="winner gets ice cream!"></option>
+                    <option value="winner takes it all!"></option>
+                </datalist>
                 <br>
                 <input type="submit" value="Form My Story!">
             </form>
