--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                     <option value="winner takes it all!"></option>
                 </datalist>
                 <br>
+                <label for="message">Meaningful Message:</label>
+                <textarea id="message" name="message" required rows="8" cols="40"></textarea>
+                <br>
                 <input type="submit" value="Form My Story!">
             </form>
         </section>
