--- a/resources/html/story.html
+++ b/resources/html/story.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <title>Completed Story</title>
         <script type="text/javascript" src="../js/main.js" defer></script>
@@ -20,6 +21,6 @@
             <span> || </span>
             <a href="../html/original.html">Original Story</a>
         </section>
-        
+
     </body>
 </html>
