--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <link rel="stylesheet" href="./resources/css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -17,25 +18,25 @@
             <!-- Add your form below:-->
             <form action="./resources/html/story.html" method="get">
                 <label for="animal-1">Animal:</label>
-                <input id="animal-1" type="text" name="animal-1" required>
+                <input id="animal-1" type="text" name="animal-1" required value="ex. Tortoise">
                 <br>
                 <label for="animal-2">Another Animal:</label>
-                <input id="animal-2" name="animal-2" type="text" required>
+                <input id="animal-2" name="animal-2" type="text" required value="ex. Hare">
                 <br>
                 <label for="animal-3">One More Animal:</label>
-                <input id="animal-3" name="animal-3" type="text" required>
+                <input id="animal-3" name="animal-3" type="text" required value="ex. Fox">
                 <br>
                 <label for="adj-1">Adjective (past tense):</label>
-                <input id="adj-1" name="adj-1" type="text" required>
+                <input id="adj-1" name="adj-1" type="text" required value="ex. amused">
                 <br>
                 <label for="verb-1">Verb (ends in -ing):</label>
-                <input id="verb-1" name="verb-1" type="text" required>
+                <input id="verb-1" name="verb-1" type="text" required value="ex. sleeping">
                 <br>
                 <label for="num-1">Number:</label>
-                <input id="num-1" name="num-1" type="number" required>
+                <input id="num-1" name="num-1" type="number" required value="3">
                 <br>
                 <span>Yes or No:</span>
-                <input id="yes" type="radio" name="answer" value="yes" required>
+                <input id="yes" type="radio" name="answer" value="yes" required checked>
                 <label for="yes">Yes</label>
                 <input id="no" type="radio" name="answer" value="no" required>
                 <label for="no">No</label>
@@ -47,14 +48,14 @@
                 </select>
                 <br>
                 <label for="quote">Motivational Quote:</label>
-                <input id="quote" name="quote" type="text" required list="quote-choices">
+                <input id="quote" name="quote" type="text" required list="quote-choices" value="ex. you can do it!" minlength="3" maxlength="100">
                 <datalist id="quote-choices">
                     <option value="winner gets ice cream!"></option>
                     <option value="winner takes it all!"></option>
                 </datalist>
                 <br>
                 <label for="message">Meaningful Message:</label>
-                <textarea id="message" name="message" required rows="8" cols="40"></textarea>
+                <textarea id="message" name="message" required rows="8" cols="40">Type your Meaningful Message Here !</textarea>
                 <br>
                 <input type="submit" value="Form My Story!">
             </form>
