--- a/resources/html/original.html
+++ b/resources/html/original.html
@@ -1,5 +1,6 @@
 <html lang="en" dir="ltr">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <title>Completed Story</title>
         <script type="text/javascript" src="../js/main.js" defer></script>
@@ -28,6 +29,6 @@
             <hr>
             <a href="../../index.html">Start Over!</a>
         </section>
-        
+
     </body>
 </html>
